css/style.css
/* ... */
#event_content .eventDetail > .labelrow { margin-left: 20px; display: inline; float: left; }

#event_content .eventDetailLast { margin-bottom: 2px; }
#event_content .halfHeight .eventDetail { padding: 5px; }
#event_content .halfHeight .eventDetail > .label { padding-bottom: 10px; }

/* 2 column split - for summary */
#event_content .cols2 { padding-bottom:30px; }
#event_content .cols2 > .left { clear: left; width: 48%; }
#event_content .cols2 > .right { clear: right; float: right; width: 48%; }
/* reduced labels on two column split */
#event_content .cols2 > .left > h4, #event_content > .cols2 > .right > h4 { color:#56a7f1; font-size:13px; padding:5px 10px 0 10px; margin-bottom: 5px; }

#event_content .colsX { padding-bottom:10px; clear:right; }
#event_content .colsX > .colStack { float: left; width:20%; }
#event_content .colsX > .colThird { float: left; width:33%; }


/* event comments - cancellations */
#event_content ul.eventComments { font-size:12px; }
#event_content ul.eventComments { list-style-type: none; padding:0; margin:10px 0 20px 10px; }
#event_content ul.eventComments > li { margin-bottom:8px; padding-bottom: 8px; border-bottom:1px dotted #dae6f1; }

/* meta data (creation and modification) */
#event_content .metaData { width:75%; font-size:12px; font-style: italic; padding:3px 10px 8px 10px; margin-bottom:2px; color:#888; border-bottom:1px dotted #dae6f1;  }
#event_content .metaData .info { margin-right: 15px; }
#event_content .metaData .user { color:#666; }

/* event subsection */
#event_content h3.subsection { font-size:14px; color:#111; background:#dae6f1; padding:12px 10px; margin-top: 10px; }
#event_content .cols2 h3.subsection { margin-top: 10px; clear: both; border-bottom: 1px solid #ccc; padding-bottom: 5px; }

#event_content .splitElement { padding:10px 0; margin:10px 0; border-top:5px solid #dae6f1; border-bottom:5px solid #dae6f1; }
#event_content .splitElement .left 	{ clear: left; float: left; width: 50%; }
#event_content .splitElement .right { clear: right; float: right; width: 50%; }

.eventDetail > .data { display:inline-block; position:relative;}
.eventDetail > .data.split { width:100%; }
.eventDetail > .data.split	> .left { clear: left; float: left; width: 40%; }
.eventDetail > .data.split	> .right { clear: right; float: right; width: 60%; }
.eventDetail > .data.limitWidth { width:830px; }
.eventDetail > .data.limitWidth .procedureItem {clear: both;}
.eventDetail > .data.limitWidth .procedureItem .left {width: 55px; display: inline-block; float:left;}
.eventDetail > .data.limitWidth .procedureItem .middle {width: 350px; display: inline-block;}
.eventDetail > .data.limitWidth .procedureItem .middle.noDuration {width: 410px;}
.eventDetail > .data.limitWidth .procedureItem .right {width: 63px; display: inline-block; float: right; text-align: right;}
.eventDetail > .data .group { display: inline-block; background:#e3f0f2; padding:4px 12px 5px 8px; margin-right: 15px; margin-bottom:4px; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; }
.eventDetail > .data .group:hover { background:#fff;}
.eventDetail > .data label { margin: 0 0 0 5px; position:relative; top:1px; }
.eventDetail > .data > .labelHint { width: 280px; }
.eventDetail > .datarow-first { float: left; }
.eventDetail > .datarow { float: left; margin-left: 10px; }

.eventDetail > .datacol1 { display:inline-block; position:relative;}
.eventDetail > .datacol1.limitWidth { width:350px; }
.eventDetail > .datacol1 > .group { display: inline-block; background:#e3f0f2; padding:4px 12px 5px 8px; margin-right: 15px; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; }
.eventDetail > .datacol1 > .group:hover { background:#fff;}
.eventDetail > .datacol1 label { margin: 0 0 0 5px; position:relative; top:1px; }
.eventDetail > .datacol1 > .labelHint { width: 280px; }

.eventDetail > .datacol2 { display:inline-block; position:relative;}
.eventDetail > .datacol2.limitWidth { width:350px; }
.eventDetail > .datacol2 > .group { display: inline-block; background:#e3f0f2; padding:4px 12px 5px 8px; margin-right: 15px; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; }
.eventDetail > .datacol2 > .group:hover { background:#fff;}
.eventDetail > .datacol2 label { margin: 0 0 0 5px; position:relative; top:1px; }
.eventDetail > .datacol2 > .labelHint { width: 280px; }

/* extra details */
.eventDetail .extraDetails { display:block; margin:8px 0; padding-top:8px; border-top:1px dotted #b9c4cd; }
.extraDetails-margin { margin-left: 310px; }

/* ON-DEMAND - wrapper for elements that appear 'on-demand' */
#event_content .ondemand { position:relative; border:7px solid #c8d3dd; padding:2px 8px 5px 8px; margin-top:5px; margin-bottom:3px; background: transparent url(../img/_elements/icons/extra-element_view.png) top right no-repeat; -webkit-border-radius: 10px; -moz-border-radius: 10px; border-radius: 10px; }
#event_content .hidden { display: none; }
.ondemand > .demandReason { position:absolute; top:0; right:30px; color:#979fa7; font-size:11px; padding:4px 7px 2px 7px; 
background: -moz-linear-gradient(#c8d3dd, #dae6f1);    
background: -ms-linear-gradient(#c8d3dd, #dae6f1);  
background: -webkit-linear-gradient(#c8d3dd, #dae6f1); 
-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#c8d3dd', endColorstr='#dae6f1')"; 
background:	linear-gradient(#c8d3dd, #dae6f1);
-webkit-border-bottom-right-radius: 6px; -webkit-border-bottom-left-radius: 6px; -moz-border-radius-bottomright: 6px; -moz-border-radius-bottomleft: 6px; border-bottom-right-radius: 6px; border-bottom-left-radius: 6px; }

/* all OPTIONAL elements hidden in flow */
#event_content .eventDetail.optional { border-top:2px dotted #8c949c; border-bottom:2px dotted #8c949c; margin-top:4px; margin-bottom: 5px; }
/* ... */

